fixed the verification page's table to match the head registrars table (including its buttons, fonts, modals, and colors), also added the 'letter spacing' at * tag of  the index css to apply spacing to all of the texts in the site.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,27 +2,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 :root {
   --primary-maroon: #790000;
+  --primary-maroon-hover: #8b0000;
   --bg-grey: #f5f3f3;
   --status-yellow: #fff200;
   --status-orange: #f68e56;
   --status-green: #00a651;
+  --status-green-hover: #01b458;
   --main-white: #ffffff;
+  --main-black: #000000;
 
-  /* REMOVE COMMENT IF UNDERSTOOD, THESE ARE THE COLOR VARIABLES 
-  FOR THE BUTTONS INSIDE THE MODALS */
-  --btn-submit: #198754;
-  --btn-hover-submit: #157347;
-  --btn-close: #960000;
-  --btn-hover-close: #7c0000;
-  /*-----------------------------*/
-
+  /* REMOVED THE COLOR VARIABLES FOR MODAL, USE THE COLOR VARIABLES IN 
+  THE ROOT: INSTEAD (SEAN) */
   --main-font: "Montserrat", sans-serif;
+
 }
 
 * {
   margin: 0;
   padding: 0;
   font-family: var(--main-font);
+  /* LET ME KNOW IF YOU GUYS WANT TO REMOVE THE LETTER WEBSITE (SEAN) */
+  letter-spacing: 0.5px !important;
 }
 
 .table-container {
